src/ui/snapshots/cornercase__ui__files__tests__draws_a_file_with_its_marks.snap
---
source: src/ui/files.rs
expression: "render(&opened(None, &[]))"
---
  ‹  src/main.rs                             ×
  4 lines · rust      open   ask agent   copy

   1   fn main() {
   2 ▎     run();
   3       done();
   4   }
