src/ui/snapshots/cornercase__ui__files__tests__draws_name_results.snap
---
source: src/ui/files.rs
assertion_line: 733
expression: render(&names())
---
  files  ~/projects/shop                     ×
  ⌕ main                                  ×  ▤
  2 files
▌ src/main.rs
  docs/maintaining.md
