src/ui/snapshots/cornercase__ui__files__tests__draws_text_results_by_file.snap
---
source: src/ui/files.rs
assertion_line: 755
expression: render(&texts())
---
  Files  ~/projects/shop                     ×
  ⌕ run                                   ×  ▤
  2 files
  src/main.rs                                 2
      2  run();
▌     9  fn run() {}
  README.md                                   1
      4  cargo run
