src/ui/snapshots/cornercase__ui__files__tests__draws_the_tree_with_git_marks.snap
---
source: src/ui/files.rs
assertion_line: 690
expression: render(&tree())
---
  Files  ~/projects/shop                     ×
  ⌕ text in the files                        ▤

  ▾ src                                      ●
    ▸ ui                                     ●
      main.rs                                M
▌     lib.rs
    README.md
