src/ui/snapshots/cornercase__ui__files__tests__unfolds_the_removed_lines_and_shows_the_selection.snap
---
source: src/ui/files.rs
expression: "render(&opened(Some((3, 2)), &[2]))"
---
  ‹  src/main.rs                             ×
  lines 2–3           open   ask agent   copy

   1   fn main() {
     -     old();
   2 ▎     run();
   3       done();
   4   }
